--- a/login.html
+++ b/login.html
@@ -9,34 +9,90 @@
   <script src="config.js"></script>
   <style>
     :root{ color-scheme: light; }
-    body{ background: rgb(248 250 252); }
+    body{ background: linear-gradient(180deg, rgba(240,253,250,1) 0%, rgba(239,246,255,1) 100%); }
+    /* Fallback glass card if Tailwind fails */
+    .glass{ background: rgba(255,255,255,.9); border-radius:16px; box-shadow:0 10px 25px rgba(2,6,23,.08); border:1px solid rgba(15,23,42,.06); }
   </style>
 </head>
-<body class="min-h-screen flex items-center justify-center p-4 text-slate-800">
-  <div class="w-full max-w-md bg-white shadow rounded-xl p-6">
-    <a href="index.html" class="inline-flex items-center gap-2 text-sm text-slate-600 hover:text-slate-800 mb-2">
-      <i data-lucide="arrow-left" class="w-4 h-4"></i>
-      <span>Kembali ke Beranda</span>
-    </a>
-    <h1 class="text-xl font-bold text-center">Masuk</h1>
-    <p class="text-center text-sm text-slate-500">Sistem PKL & UKK</p>
-    <form id="form" class="mt-5 space-y-3">
-      <div>
-        <label class="block text-sm mb-1">Username</label>
-        <input id="u" class="w-full border rounded px-3 py-2" autocomplete="username" required />
-      </div>
-      <div>
-        <label class="block text-sm mb-1">Password</label>
-        <div class="relative">
-          <input id="p" type="password" class="w-full border rounded px-3 py-2 pr-10" autocomplete="current-password" required />
-          <button type="button" id="togglePwd" aria-label="Tampilkan password" class="absolute inset-y-0 right-0 px-3 text-slate-500 hover:text-slate-700">
-            <i data-lucide="eye" class="w-4 h-4"></i>
-          </button>
+<body class="min-h-screen text-slate-800">
+  <!-- Decorative blobs -->
+  <div class="pointer-events-none absolute inset-0 -z-10 overflow-hidden">
+    <div class="absolute -top-24 -left-24 h-80 w-80 rounded-full bg-emerald-200/40 blur-3xl"></div>
+    <div class="absolute -bottom-24 -right-24 h-80 w-80 rounded-full bg-blue-200/40 blur-3xl"></div>
+  </div>
+
+  <div class="mx-auto max-w-6xl px-4 py-10">
+    <div class="mb-6">
+      <a href="index.html" class="inline-flex items-center gap-2 text-sm text-slate-600 hover:text-slate-800">
+        <i data-lucide="arrow-left" class="w-4 h-4"></i>
+        <span>Kembali ke Beranda</span>
+      </a>
+    </div>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6 items-center">
+      <!-- Brand / Intro -->
+      <div class="hidden md:block">
+        <div class="rounded-2xl bg-white/60 backdrop-blur-md ring-1 ring-slate-200 shadow p-6">
+          <div class="flex items-center gap-3">
+            <img src="logo.png" alt="Logo TKJ SMKN 1 Telagasari" class="h-11 w-11 rounded-lg" />
+            <div>
+              <div class="font-bold text-lg tracking-tight">SI PKL & UKK Industri</div>
+              <div class="text-xs text-slate-500">TKJ SMKN 1 Telagasari</div>
+            </div>
+          </div>
+          <p class="mt-4 text-sm text-slate-600 leading-relaxed">
+            Kelola dokumen PKL dan UKK dengan mudah. Unggah laporan, pantau progres, dan tetap terhubung dengan pembimbing serta penguji.
+          </p>
+          <ul class="mt-4 text-sm text-slate-600 space-y-2">
+            <li class="flex items-center gap-2"><i data-lucide="file-up" class="w-4 h-4 text-emerald-600"></i> Upload cepat via dashboard</li>
+            <li class="flex items-center gap-2"><i data-lucide="users" class="w-4 h-4 text-blue-600"></i> Monitoring guru real-time</li>
+            <li class="flex items-center gap-2"><i data-lucide="shield-check" class="w-4 h-4 text-emerald-600"></i> Akun aman dan terverifikasi</li>
+          </ul>
         </div>
       </div>
-      <button class="w-full bg-blue-600 text-white rounded py-2 font-medium">Masuk</button>
-      <p id="err" class="text-red-600 text-sm hidden"></p>
-    </form>
+
+      <!-- Login Card -->
+      <div>
+        <div class="w-full max-w-md mx-auto bg-white/90 backdrop-blur rounded-2xl p-6 shadow-xl ring-1 ring-slate-200">
+          <div class="flex items-center gap-3 mb-4">
+            <div class="h-10 w-10 rounded-xl bg-emerald-600 text-white flex items-center justify-center ring-1 ring-emerald-300/60 shadow-sm"> 
+              <i data-lucide="lock" class="w-5 h-5"></i>
+            </div>
+            <div>
+              <h1 class="text-xl font-bold leading-tight">Masuk</h1>
+              <p class="text-xs text-slate-500">Sistem PKL & UKK</p>
+            </div>
+          </div>
+
+          <form id="form" class="mt-1 space-y-4">
+            <div>
+              <label for="u" class="block text-sm font-medium mb-1">Username</label>
+              <div class="relative">
+                <i data-lucide="user" class="absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400"></i>
+                <input id="u" class="w-full border border-slate-300 rounded-lg pl-9 pr-3 py-2 text-sm placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-emerald-300 focus:border-emerald-400" autocomplete="username" placeholder="nama pengguna" required />
+              </div>
+            </div>
+
+            <div>
+              <label for="p" class="block text-sm font-medium mb-1">Password</label>
+              <div class="relative">
+                <i data-lucide="key-round" class="absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400"></i>
+                <input id="p" type="password" class="w-full border border-slate-300 rounded-lg pl-9 pr-10 py-2 text-sm placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-emerald-300 focus:border-emerald-400" autocomplete="current-password" placeholder="kata sandi" required />
+                <button type="button" id="togglePwd" aria-label="Tampilkan password" class="absolute inset-y-0 right-0 px-3 text-slate-500 hover:text-slate-700">
+                  <i data-lucide="eye" class="w-4 h-4"></i>
+                </button>
+              </div>
+            </div>
+
+            <button class="w-full inline-flex items-center justify-center gap-2 bg-emerald-600 hover:bg-emerald-700 text-white rounded-lg py-2.5 text-sm font-semibold shadow-sm focus:outline-none focus:ring-2 focus:ring-emerald-300">
+              <i data-lucide="log-in" class="w-4 h-4"></i> Masuk
+            </button>
+            <p id="err" class="text-red-600 text-sm hidden"></p>
+            <p class="text-[12px] text-slate-500">Lupa password? Hubungi admin untuk reset akun.</p>
+          </form>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script>
